change warning levels for two things from warn to lower for accumulo monitor (#2119)